# shared_memory_cpp

./: CMakeLists.txt  README.md  anonymous_semaphore.h  consumer.cpp  main.cpp  main2.cpp  producer.cpp
dslib/: CMakeLists.txt
interprocess_comm/: CMakeLists.txt
interprocess_comm/sharedmm/include/sharedmm/: shared_mem_buffer.h
lib/: CMakeLists.txt
lib/include/: groupManager.h  messageBox.h
lib/src/: groupManager.cpp  messageBox.cpp
lib_ipc/: CMakeLists.txt
lib_ipc/sharedmm/include/services/: channel.h
lib_ipc/sharedmm/include/sharedmm/: shared_mem_buffer.h  shared_memory_client.h  shared_memory_provider.h  shmmdef.h
lib_ipc/sharedmm/src/: shared_memory_client.cpp  shared_memory_provider.cpp
